elements/rh-cta/rh-cta.css
/* ... */
:host(:is(:focus, :focus-within)) #container:after {
  border-style: solid;
  border-color: var(--rh-cta-focus-inner-border-color);
}

/*****************************************************************************
 * HOVER STATE                                                               *
 *****************************************************************************/

:host(:hover) #container {
  color: var(--rh-cta-hover-color);
  border-color: var(--rh-cta-hover-border-color);
  background-color: var(--rh-cta-hover-background-color);

  --rh-cta-text-decoration: var(--rh-cta-hover-text-decoration);
}

:host(:hover) #container svg {
  translate: 3px 0;
}

:host(:hover) #container.rtl svg {
  translate: -3px 0;
}

/*****************************************************************************
 * ACTIVE STATE                                                              *
 *****************************************************************************/

:host(:active) {
  background-color: var(--rh-cta-active-background-color);
}

:host(:active) #container {
  --rh-cta-background-color: var(--rh-cta-active-container-background-color,
    var(--rh-cta-active-background-color));
}

:host(:active) #container:after {
  border-style: solid;
  border-color: var(--rh-cta-active-inner-border-color) !important;
}


/*****************************************************************************
 * VARIANTS                                                                  *
 *****************************************************************************/

:host([variant]) #container {
  font-size: var(--rh-font-size-body-text-md, 1rem);
  border-radius: var(--rh-border-radius-default, 3px);
  border-width: var(--rh-border-width-sm, 1px);
  padding-inline: 0;
}

:host([variant]) #container ::slotted(*) {
  padding: var(--rh-space-lg, 16px) var(--rh-space-xl, 24px) !important;
  display: inline-flex !important;
}

:host([variant$="ary"]) #container ::slotted(*) {
  font-size: var(--rh-cta-font-size-priority, var(--rh-font-size-text-lg, 1rem));
  text-align: center;
}

:host([variant]) #container.icon {
  padding-inline: var(--rh-space-xl, 24px) !important;
  padding-block: var(--rh-space-lg, 16px) !important;
}

:host([variant]:not([variant="brick"])) #container.icon {
  text-align: center;
}

:host([variant]) #container.icon ::slotted(*) {
  display: inline !important;
  padding-inline: 0 !important;
}

:host([variant]) #container.svg ::slotted(*) {
  padding-inline-end: calc(var(--_arrow-plus-padding) + var(--rh-space-xl, 24px)) !important;
}

:host([variant]) #container.icon pf-icon {
  margin-inline-start: var(--rh-space-lg, 16px);
}

/* prefer to group state-bound styles */
/* stylelint-disable-next-line no-descending-specificity */
:host([variant]) #container svg {
  margin-inline-start: calc(-24px - var(--pf-icon--size));
  margin-inline-end: var(--rh-space-xl, 24px);
  display: none;
}

/*****************************************************************************
 * DEFAULT
 *****************************************************************************/

:host(:not([variant])) {
  --rh-cta-background-color: transparent;
  --rh-cta-border-color: transparent;
  --rh-cta-color: var(--rh-color-interactive-blue, #0066cc);
  --rh-cta-hover-background-color: transparent;
  --rh-cta-hover-border-color: transparent;
  --rh-cta-hover-inner-border-color: transparent;
  --rh-cta-hover-color: var(--rh-color-interactive-blue-darkest, #004080);
  --rh-cta-hover-text-decoration: none;
  --rh-cta-focus-background-color: transparent;

  /* --rh-color-border-interactive-on-light with 10% opacity */
  --rh-cta-focus-container-background-color: #0066cc1a;
  --rh-cta-focus-border-color: transparent;
  --rh-cta-focus-inner-border-color: transparent;
  --rh-cta-focus-color: var(--rh-color-interactive-blue-darker, #0066cc);
  --rh-cta-focus-text-decoration: none;

  /* --rh-color-border-interactive-on-light with 10% opacity */
  --rh-cta-active-container-background-color: #0066cc1a;
  --rh-cta-active-inner-border-color: transparent;
  --rh-cta-active-text-decoration: none;
}

:host(:not([variant])) .dark {
  --rh-cta-color: var(--rh-color-interactive-blue-lighter, #73bcf7);
  --rh-cta-hover-color: var(--rh-color-interactive-blue-lightest, #bee1f4);

  /* --rh-color-interactive-blue-lighter with 25% opacity */
  --rh-cta-focus-container-background-color: #73bcf740;
  --rh-cta-focus-border-color: transparent;
  --rh-cta-focus-color: var(--rh-color-interactive-blue-lighter, #73bcf7);
  --rh-cta-focus-inner-border-color: transparent;
  --rh-cta-focus-text-decoration: none;

  /* --rh-color-interactive-blue-lighter with 25% opacity */
  --rh-cta-active-container-background-color: #73bcf740;
  --rh-cta-active-text-decoration: none;
}

/*****************************************************************************
 * PRIMARY
 *****************************************************************************/

:host([variant="primary"]) #container {
  border-style: solid;

  --rh-cta-background-color: var(--rh-color-brand-red-on-light, #ee0000);
  --rh-cta-border-color: var(--rh-color-brand-red-on-light, #ee0000);
  --rh-cta-color: var(--rh-color-text-primary-on-dark, #ffffff);
  --rh-cta-hover-background-color: var(--rh-color-brand-red-dark, #be0000);
  --rh-cta-hover-border-color: var(--rh-color-brand-red-dark, #be0000);
  --rh-cta-hover-color: var(--rh-color-text-primary-on-dark, #ffffff);
  --rh-cta-focus-background-color: var(--rh-color-brand-red-on-light, #ee0000);
  --rh-cta-focus-border-color: var(--rh-color-brand-red-on-light, #ee0000);
  --rh-cta-focus-color: var(--rh-color-text-primary-on-dark, #ffffff);
  --rh-cta-focus-inner-border-color: var(--rh-color-text-primary-on-dark, #ffffff);
  --rh-cta-active-background-color: var(--rh-color-brand-red-dark, #be0000);
  --rh-cta-active-inner-border-color: var(--rh-color-text-primary-on-dark, #ffffff);
}
/* ... */

